--- a/css/style-infoDR.css
+++ b/css/style-infoDR.css
@@ -347,10 +347,10 @@ span{
     background: #f2fdf8;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
-.schedule-box input{
+.schedule-box .selected-date input{
     flex: 1;
     margin-right: 20px;
     padding: 10px 10px;
@@ -359,41 +359,31 @@ span{
     font-size: 16px;
     border-radius: 5px;
     position: relative;
+    height: 40px;
     width: auto;
     font-family: 'Poppins';
 }
 
-/* .schedule-box input::-webkit-calendar-picker-indicator{
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: auto;
-    height: auto;
-    position: absolute;
-    background-position: calc(100%-10px);
-    background-size: 20px;
-    cursor: pointer;
-} */
 
-.schedule-box button{
+
+.schedule-box .shift-opt input{
     background: #fff;
     border: 1.5px solid var(--main-color-1);
     outline: 0;
     padding: 10px 10px;
     border-radius: 5px;
-    /* font-weight: 500; */
-    font-family: 'Poppins';
+    max-width: 120px;
+    /* font-family: 'Poppins'; */
     font-size: 16px ;
     cursor: pointer;
 }
 
-.schedule button:hover{
+.schedule-box .shift-opt input:hover{
     background: var(--main-color-1);
     color: #fff;
 }
 
-.schedule .schedule-box .shift-opt button.active{
+.schedule .schedule-box .shift-opt input.active{
     background: var(--main-color-1);
     color: #fff;
     background-repeat: no-repeat;
