--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ ul{
     width: 100%;
     padding: 0 180px;
     margin: 0 auto;
-    background-color: #fff;
+    /* background-color: #fff; */
 }
 
 .logo img{
@@ -104,6 +104,7 @@ nav.container{
     align-items: center;
     flex-wrap: wrap;
     transition: 0.5s;
+    background-color: #fff;
 }   
 
 nav.scrolled .logo{
@@ -167,15 +168,30 @@ nav.scrolled .logo{
 
 
 /* ---------------------  Showcase Area Styles --------------------- */
+/* .showcase-area{
+    overflow-x: hidden;
+    background-color: var(--bg-color);
+    font-family: "Montserrat", sans-serif;
+    background-image: url("https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/photo7.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 10;
+} */
 
 .showcase-area{
-    padding: 90px 0;
+    /* padding: 90px 0; */
     width: 100%;
     overflow: hidden;
 }
 
+.showcase-area img{
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    object-fit: cover;
+}
+
 .showcase-area .container{
-    background-image: url('../assets/photo7.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
