--- a/css/style-DR.css
+++ b/css/style-DR.css
@@ -265,7 +265,7 @@ h2{
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    background: url('../assets/doctor1.jpg') no-repeat center / cover;
+    /* background: url('../assets/doctor1.jpg') no-repeat center / cover; */
     border: 4px solid #4edd95;
     position: absolute;
     top: 15px;
