--- a/css/style-DR.css
+++ b/css/style-DR.css
@@ -24,11 +24,19 @@
 
 /* ---------------------  General Styles --------------------- */
 
+
 *, *::before, *::after{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
+}
 
+html{
+    font-size: 62,5%;
+    overflow-x: hidden ;
+    scroll-behavior: smooth;
+    scroll-padding-top: 10rem;
 }
 
 body{
@@ -40,7 +48,6 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
 }
-
 
 ::selection{
     background-color: hsla(var(--hue-1), 71%, 44%, 0.9);
