--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,14 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
+}
 
+html{
+    font-size: 62,5%;
+    overflow-x: hidden ;
+    scroll-behavior: smooth;
+    scroll-padding-top: 10rem;
 }
 
 body{
@@ -169,24 +176,27 @@ nav.scrolled .logo{
 /* ---------------------  Showcase Area Styles --------------------- */
 
 .showcase-area{
-    /* padding: 90px 0; */
+    padding: 90px 0;
     width: 100%;
+    height: 800px;
     overflow: hidden;
+    position: relative;
 }
 
 .showcase-area img{
     position: absolute;
     z-index: -1;
     width: 100%;
+    max-height: 700px;
     object-fit: cover;
 }
 
 .showcase-area .container{
-
+    height: 650px;
 }
 
 .showcase-area .showcase-info{
-    padding: 50px;
+    padding: 50px 35px;
 }
 
 .sub-heading{
@@ -194,6 +204,7 @@ nav.scrolled .logo{
     font-size: 1.5rem;
     font-weight: 500;
     margin-bottom: 1rem;
+    padding-left: 300px;
 }
 
 .heading{
@@ -201,4 +212,12 @@ nav.scrolled .logo{
     font-style: italic;
     font-size: 3rem;
     line-height: 1.3;
+}
+
+.showcase-area .container .showcase-logo {
+    position: relative;
+    left: -200px;
+    /* top: -250px; */
+    max-height: 200px;
+
 }
