--- a/css/style-infoDR.css
+++ b/css/style-infoDR.css
@@ -38,7 +38,7 @@ body{
     overflow-x: hidden;
     background-color: var(--bg-color);
     font-family: "Montserrat", sans-serif;
-    background-image: url('../assets/bg-info.png');
+    background-image: url('https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/bg-info.png');
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
