--- a/css/style.css
+++ b/css/style.css
@@ -40,10 +40,10 @@ body{
     overflow-x: hidden;
     background-color: var(--bg-color);
     font-family: "Montserrat", sans-serif;
-    background-image: url('../assets/photo5.png');
+    background-image: url('https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/bg-main.png');
+    background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
-    opacity: 10;
 }
 
 
