--- a/css/style-DR.css
+++ b/css/style-DR.css
@@ -272,7 +272,7 @@ h2{
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    /* background: url('../assets/doctor1.jpg') no-repeat center / cover; */
+    background: url('../assets/doctor1.jpg') no-repeat center / cover;
     border: 4px solid #4edd95;
     position: absolute;
     top: 15px;
@@ -306,7 +306,6 @@ p.cost{
     background: rgb(71,189,203);
     background: linear-gradient(93deg, rgba(71,189,203,1) 0%, rgba(49,216,133,1) 100%);
     color: #fff;
-    /* font-size: 0.85rem; */
     text-transform: capitalize;
 }
 
