--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
 }
 
 html{
-    /* font-size: 62.5%; */
+    font-size: 100%;
     overflow-x: hidden ;
     scroll-behavior: smooth;
     scroll-padding-top: 5px;
@@ -81,15 +81,56 @@ ul{
     list-style: none;
 }
 
+button.btn{
+    color: white;
+    background: rgb(71,189,203);
+    background: linear-gradient(93deg, rgba(71,189,203,1) 0%, rgba(49,216,133,1) 100%);
+    border-radius: 10px;
+}
+
 /* ---------------------  Reusable CSS Code --------------------- */
 
 header .info{
     position: relative;
     width: 100%;
-    padding: 10px 100px;
     margin: 0 auto;
+    padding: 3px 0 ;
     background-color: var(--main-color-1);
     color:#fff;
+}
+
+.info .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.info .container .profile-tab{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.info .container .profile-tab .username{
+    margin-right: 15px;
+    color: white;
+    font-weight: 500;
+} 
+
+.info .container .profile-tab .user-ava{
+    cursor: pointer;
+}
+
+.info .container .profile-tab .user-ava img{
+    margin-top: 5px;
+    width: 25px;
+    height: 25px;
+}
+
+.info .container .profile-tab .uil.uil-angle-down{
+    font-size: 25px;
+    margin-left: -5px;
 }
 
 header .nav-bar{
@@ -104,7 +145,7 @@ header .nav-bar{
     position: relative;
     width: 100%;
     max-width: 1300px;
-    /* padding: 0 180px; */
+    padding: 0 20px;
     margin: 0 auto;
     /* background-color: #fff; */
 }
@@ -125,6 +166,12 @@ header{
 header .logo{
     height: 55px;
     line-height: 55px;
+}
+
+span{
+    /* font-size: 20px; */
+    font-weight: 520;
+    color: var(--text-color);
 }
 
 /* ---------------------  Navbar Styles --------------------- */
@@ -150,28 +197,6 @@ nav.scrolled .logo{
     line-height: 50px;
 }
 
-.info ul{
-    flex: 1;
-    display: flex;
-    justify-content: space-between;
-}
-
-.login{
-    display: inline-block;
-    /* text-transform: uppercase; */
-    font-size: 1rem;
-    /* letter-spacing: 0.5px; */
-    color: #fff;
-    font-weight: 400;
-}
-
-
-/* .links ul{
-    display: flex;
-    align-items: center;
-    width: 100%;
-} */
-
 .nav-link{
     position: relative;
     display: inline-block;
@@ -182,6 +207,10 @@ nav.scrolled .logo{
     color: var(--text-color);
     font-weight: 520;
     transition: 0.3s;
+}
+
+.nav-link .uil.uil-angle-down{
+    font-size: 20px;
 }
 
 .nav-link::after{
@@ -205,7 +234,7 @@ nav.scrolled .logo{
 }
 
 #menu-btn{
-    padding-right: 2rem;
+    padding-right: 0.5rem;
     font-size: 25px;
     font-weight: 800;
     cursor: pointer;
@@ -219,7 +248,7 @@ nav.scrolled .logo{
 .showcase-area{
     padding: 90px 0;
     width: 100%;
-    height: 710px;
+    height: 770px;
     overflow: hidden;
     position: relative; 
 }
@@ -228,7 +257,7 @@ nav.scrolled .logo{
     position: absolute;
     z-index: -1;
     width: 100%;
-    max-height: 700px;
+    max-height: 800px;
     object-fit: cover;
 }
 
@@ -240,7 +269,7 @@ nav.scrolled .logo{
 }
 
 .showcase-area .showcase-info{
-    padding: 20px 40px;
+    padding: 40px 40px;
     margin-top: 30px;
 }
 
@@ -281,8 +310,8 @@ nav.scrolled .logo{
 .showcase-area .container .service .service-btn{
     /* position: relative; */
     display: inline-block;
-    width: 125px;
-    height: 125px;
+    width: 120px;
+    height: 120px;
     border-radius: 20px;
     background-color: white;
     box-shadow: 0 5px 15px 1px rgba(0, 0, 0, 0.1);
@@ -310,6 +339,196 @@ nav.scrolled .logo{
     font-weight: 600;
     color: var(--text-color);
     letter-spacing: 0.5px;
+    justify-content: center;
+}
+
+/* ---------------------  Search Bar Styles --------------------- */
+
+.search-bar{
+    margin: 50px auto;
+}
+
+.search-bar .container{
+    text-align: center;
+}
+
+h1 {
+    padding: 0 auto;
+    color: var(--main-color-1);
+    /* font-size: 1.5rem; */
+    /* font-weight: 600; */
+    margin-bottom: 0.5rem;
+}
+
+.search{
+    min-height: 3.5rem;
+    max-width: 900px;
+    background-color: white;
+    margin: 2rem auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    border-radius: 10px;
+    border: 2px solid var(--main-color-dark-1);
+    font-size: 20px;
+    /* cursor: pointer; */
+}
+
+.search input{
+    padding-left: 20px;
+    height: 100%;
+    border: none;
+    background: none;
+    outline: none;
+    font-family: inherit;
+    width: 400px;
+}
+
+.btn-search{
+    position: relative;
+    min-height: 2.7rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.btn-search:hover::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    min-height: 2.7rem;
+    border-radius: 10px;
+    background-color: var(--bg-color);
+    opacity: 30%;
+    transition: 0.3s;
+}
+
+/* ---------------------  Doctor Styles --------------------- */
+.bac-si-noi-bat h1{
+    text-align: center;
+    margin: 0 auto;
+    padding: 20px;
+}
+.bac-si-noi-bat{
+    position: relative;
+    margin: 50px auto;
+}
+
+.bac-si-noi-bat .container{
+    /* text-align: center; */
+    align-items: center;
+    position: relative;
+    height: 300px;
+}
+
+.bac-si-noi-bat .container .dr-card{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+    width: 450px;
+    height: 250px;
+    padding: 10px;
+    background-color: #fff;
+    color: black;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px 1px rgba(0, 0, 0, 0.1);
+    transition: .2s;
+}
+
+.bac-si-noi-bat .container .dr-card:hover{
+    transform: scale(1.05);
+}
+
+.bac-si-noi-bat .container .dr-card .content h3{
+    color: var(--text-color);
+}
+
+.bac-si-noi-bat .container .dr-card .content .trinh-do, 
+.bac-si-noi-bat .container .dr-card .content .chuyen-khoa,
+.bac-si-noi-bat .container .dr-card .content .phong-kham{
+    display: flex;
+    align-items: center;    
+    padding-top: 20px;
+}
+
+.bac-si-noi-bat .container .dr-card .content i{
+    margin-right: 10px;
+}
+
+.bac-si-noi-bat .container .dr-card .image{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background: url('https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/doctor1.jpg') no-repeat center / cover;
+    border: 4px solid #4edd95;
+}
+
+.swiper-pagination-bullet{
+    width: 30px;
+    height: 5px;
+    border-radius: 5px;
+    background: #4edd95;
+}
+
+.swiper-pagination-bullet.swiper-pagination-bullet-active{
+    background: rgb(71,189,203);
+    background: linear-gradient(93deg, rgba(71,189,203,1) 0%, rgba(49,216,133,1) 100%);
+}
+
+/* ---------------------  Sản Phẩm Y Tế --------------------- */
+
+.sp-y-te {
+    text-align: center;
+}
+.sp-y-te .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    /* gap: 10px; */
+    width: 100%;
+    padding: 50px auto;
+}
+
+.sp-y-te .container .product-btn{
+    /* position: relative; */
+    display: inline-block;
+    width: 120px;
+    height: 120px;
+    border-radius: 20px;
+    background-color: white;
+    box-shadow: 0 5px 15px 1px rgba(0, 0, 0, 0.1);
+    border: 2px ;
+    margin: 0 1rem;
+    letter-spacing: 0.5px;
+    color: var(--text-color);
+    font-weight: 500;
+    transition: .3s;
+}
+
+.sp-y-te .container .product-btn:hover{
+    transform: scale(1.1);
+    background-color: var(--bg-color);
+    border: 2px solid var(--text-color);    
+}
+
+
+.sp-y-te .container .product-btn .image img{
+    margin: 5px;
+    max-width: 60px;
+}
+
+.sp-y-te .container .product-btn .text{
+    /* font-weight: 600; */
+    color: var(--text-color);
+    /* letter-spacing: 0.5px; */
     justify-content: center;
 }
 
@@ -352,8 +571,50 @@ nav.scrolled .logo{
 
 
 
+/* ---------------------  Footer Styles --------------------- */
+footer{
+    padding: 2rem 0;
+    background-color: var(--main-color-1);
+}
 
+footer .container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
 
+footer .container .logo{
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 5px 20px 0.1px rgba(0, 0, 0, 0.1);
+}
+
+footer .container .contact p.text{
+    color: #fff;
+    padding: 10px;
+}
+
+footer .container .contact p.text i{
+    margin-right: 10px;
+}
+
+ul.social-media{
+    display: flex;
+}
+
+.social-link{
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    margin-left: 1rem;
+    background: white;
+    color: var(--text-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 
 /* ---------------------  Media Queries --------------------- */
@@ -377,13 +638,17 @@ nav.scrolled .logo{
 
     header .nav-bar .container .links{
         position: absolute;
-        top: 120%; right: 2rem;
+        top: 110%; right: 2rem;
         background-color: var(--bg-color);
         backdrop-filter: blur(.4rem);
         border-radius: .5rem;
         transform: scale(0);
-        transform-origin: top left ;
+        transform-origin: top right ;
         transition: .2s linear;
+    }
+
+    header .nav-bar .container .links.active{
+        transform: scale(1);
     }
 
     header .nav-bar .container .links a{
