--- a/css/style-CK.css
+++ b/css/style-CK.css
@@ -234,81 +234,33 @@ h2{
     padding: 20px;
 }
 
-.dr-link{
-    color: var(--text-color);
+h3{
+    padding: 15px;
 }
 
-.doctor-list{
+.service .container .service-list{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(2, minmax(300px, 1fr));
     gap: 20px;
     row-gap: 40px;
     padding-left: 50px;
-    
+    color: black;
 }
 
-.dr-card{
+.service .container .service-list .service-card{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
-    width: 300px;
-    height: 450px;
+    width: 450px;
+    height: 200px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 5px 15px 1px rgba(0, 0, 0, 0.1);
 }
 
-.dr-card,
-.dr-info{
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    align-items: center;
-}
 
-.dr-image{
-    width: 100%;
-}
 
-.dr-image{
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    /* background: url('../assets/doctor1.jpg') no-repeat center / cover; */
-    border: 4px solid #4edd95;
-    position: absolute;
-    top: 15px;
-}
-
-.dr-info{
-    padding-top: 220px;
-}
-
-h3{
-    padding: 15px;
-}
-
-p.khoa{
-    color: var(--text-color);
-    padding: 0.5rem 0.5rem;
-    background-color: var(--bg-color-1);
-}
-
-p.cost{
-    position: absolute;
-    bottom: 80px;
-}
-
-.secondary-btn{
-    display: inline-block;
-    position: absolute;
-    bottom: 10px;
-    padding: 0.9rem 1.75rem;
-    border-radius: 20px;
-    background: rgb(71,189,203);
-    background: linear-gradient(93deg, rgba(71,189,203,1) 0%, rgba(49,216,133,1) 100%);
-    color: #fff;
-    /* font-size: 0.85rem; */
-    text-transform: capitalize;
-}
 
 /* ---------------------  Pagination Styles --------------------- */
 
