--- a/css/style-CK.css
+++ b/css/style-CK.css
@@ -234,10 +234,6 @@ h2{
     padding: 20px;
 }
 
-h3{
-    padding: 15px;
-}
-
 .service .container .service-list{
     display: grid;
     grid-template-columns: repeat(2, minmax(300px, 1fr));
@@ -252,11 +248,41 @@ h3{
     align-items: center;
     justify-content: center;
     position: relative;
-    width: 450px;
+    width: 500px;
     height: 200px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 5px 15px 1px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    transition: .2s;
+}
+
+.service .container .service-list .service-card:hover{
+    transform: scale(1.05);
+}
+
+.service .container .service-list .service-card .service-image{
+    width: 100px ;
+}
+
+.service .container .service-list .service-card .service-image img{
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+}
+
+.service .container .service-list .service-card .service-info{
+    width: 310px;
+    margin: auto 10px;
+}
+
+.service .container .service-list .service-card .service-info p{
+    margin-bottom: 10px;
+}
+
+.service .container .service-list .service-card i{
+    font-size: 30px;
+    color: var(--main-color-1);
 }
 
 
