--- a/css/style.css
+++ b/css/style.css
@@ -244,16 +244,71 @@ nav.scrolled .logo{
     display: none;
 }
 
-.nav-bar .container .profile-tab .menu-profile-tab{
+.nav-bar .container .menu-profile-tab{
     position: absolute;
-    top: 100%; right: 2rem;
+    top: 0%; right: 2rem;
+    /* max-width: 160px; */
     background-color: var(--bg-color);
     backdrop-filter: blur(.4rem);
     border-radius: .5rem;
-    /* transform: scale(0); */
+    transform: scale(0);
     transform-origin: top right ;
-    transition: .2s linear;
+    transition: .1s linear;
+    background-color: var(--bg-color-transparent);
+    box-shadow: 0 5px 20px 0.1px rgba(0, 0, 0, 0.1);
+} 
+
+.nav-bar .container .menu-profile-tab.active{
+    transform: scale(1);
 }
+
+.nav-bar .container .menu-profile-tab #menu-opt{
+    display: block;
+    padding: .5rem 1.5rem;
+    margin: 1.5rem .5rem;
+    color: var(--text-color);
+    border-radius: .5rem;
+    transition: .2s;
+}
+
+.nav-bar .container .menu-profile-tab #menu-opt:hover{
+    background-color: var(--main-color-1);
+    color: white;
+}
+
+.nav-bar .container .menu-booking-opt{
+    position: absolute;
+    top: 0%; right: 2rem;
+    /* max-width: 160px; */
+    background-color: var(--bg-color);
+    backdrop-filter: blur(.4rem);
+    border-radius: .5rem;
+    transform: scale(0);
+    transform-origin: top right ;
+    transition: .1s linear;
+    background-color: var(--bg-color-transparent);
+    box-shadow: 0 5px 20px 0.1px rgba(0, 0, 0, 0.1);
+} 
+
+.nav-bar .container .menu-booking-opt.active{
+    transform: scale(1);
+}
+
+.nav-bar .container .menu-booking-opt .booking-opt{
+    display: block;
+    padding: .5rem 1.5rem;
+    margin: 1.5rem .5rem;
+    color: var(--text-color);
+    border-radius: .5rem;
+    transition: .2s;
+}
+
+.nav-bar .container .menu-booking-opt .booking-opt:hover{
+    background-color: var(--main-color-1);
+    color: white;
+}
+
+
 
 /* ---------------------  Showcase Area Styles --------------------- */
 
