--- a/css/login.css
+++ b/css/login.css
@@ -23,6 +23,11 @@
 
 /* ---------------------  General Styles --------------------- */
 
+
+input {
+  font-family: "Montserrat", sans-serif;
+}
+
 *, *::before, *::after{
     padding: 0;
     margin: 0;
@@ -80,9 +85,216 @@ ul{
     list-style: none;
 }
 
-button.btn{
+.btn{
     color: white;
     background: rgb(71,189,203);
     background: linear-gradient(93deg, rgba(71,189,203,1) 0%, rgba(49,216,133,1) 100%);
     border-radius: 10px;
 }
+
+/* ---------------------  Login Styles --------------------- */
+
+
+main{
+    width: 100%;
+    min-height: 100vh;
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box{
+    position: relative;
+    width: 100%;
+    max-width: 1020px;
+    height: 650px;
+    background-color: white;
+    border-radius: 4rem;
+  box-shadow: 0 60px 40px -30px rgba(0, 0, 0, 0.27);
+}
+
+.inner-box{
+    position: absolute;
+    width: calc(100% - 4rem);
+    height: calc(100% - 4rem);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.forms-wrap{
+    position: absolute;
+    height: 100%;
+    width: 45%;
+    top: 0;
+    left: 0;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    transition: 0.8s ease-in-out;
+}
+
+form{
+  max-width: 300px;
+  width: 100%;
+  margin: 0 auto;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  transition: opacity 0.02s 0.4s;
+}
+
+form.sign-up-form{
+    opacity: 0;
+    pointer-events: none;
+}
+
+.logo{
+    display: flex;
+    align-items: center;
+}
+
+.logo img{
+    width: 200px;
+    margin-right: 0.3rem;
+}
+
+.heading h2{
+    font-size: 2.1rem;
+    font-weight: 600;
+    color: var(--text-color);
+}
+
+.heading h6{
+    color: #bababa;
+    font-weight: 400;
+    font-size: 0.75rem;
+    display: inline;
+}
+
+.toggle {
+    color: #151111;
+    text-decoration: none;
+    font-size: 0.75rem;
+    font-weight: 500;
+    transition: 0.3s;
+}
+
+.toggle:hover {
+    color: #21c078;
+}
+
+.input-wrap {
+    position: relative;
+    height: 37px;
+    margin-bottom: 2rem;
+}
+
+.input-field {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: none;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid #bbb;
+    padding: 0;
+    font-size: 0.95rem;
+    color: #151111;
+    transition: 0.4s;
+}
+
+label {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 0.95rem;
+    color: #bbb;
+    pointer-events: none;
+    transition: 0.4s;
+}
+
+
+.input-field.active {
+    border-bottom-color: #151111;
+}
+  
+.input-field.active + label {
+    font-size: 0.75rem;
+    top: -2px;
+}
+  
+
+.sign-btn {
+    display: inline-block;
+    width: 100%;
+    height: 43px;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    border-radius: 0.8rem;
+    font-size: 1rem;
+    margin-bottom: 2rem;
+    transition: 0.3s;
+}
+
+.sign-btn:hover {
+    transform: scale(1.05);
+}
+
+.text {
+    color: #bbb;
+    font-size: 0.7rem;
+}
+
+.text a {
+    color: #bbb;
+    transition: 0.3s;
+}
+
+.text a:hover {
+    color: #8bdfb9;
+}
+
+
+main.sign-up-mode form.sign-in-form {
+    opacity: 0;
+    pointer-events: none;
+  }
+  
+  main.sign-up-mode form.sign-up-form {
+    opacity: 1;
+    pointer-events: all;
+  }
+  
+  main.sign-up-mode .forms-wrap {
+    left: 55%;
+  }
+  
+  main.sign-up-mode .block {
+    left: -110%;
+  }
+
+.block {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 110%;
+    top: 0;
+    background-image: url('https://raw.githubusercontent.com/JosephD0310/Web_Booking_care/main/assets/login-v2-01.png');
+    background-size: cover;
+    border-radius: 2rem;
+    transition: 0.8s ease-in-out;
+  }
+  
+  .block img {
+    width: 500px;
+  }
+
+
+
